Fixed up the partners section on mobile and the process section

--- a/components/LegacyPage/LegacyMethods/LegacyMethodsList/legacymethods.module.scss
+++ b/components/LegacyPage/LegacyMethods/LegacyMethodsList/legacymethods.module.scss
@@ -50,8 +50,12 @@
 
 .subtitle {
   padding-bottom: 3.75rem;
-  width: 50%;
+  width: 100%;
   margin: 0 auto;
+
+  @include lg {
+    width: 50%;
+  }
 }
 
 .legacy-methods {
@@ -127,11 +131,11 @@
 }
 
 .light .divider-content,
-.light .divider-content>div {
+.light .divider-content > div {
   background: $light-mode-secondary;
 }
 
-.divider-content>div {
+.divider-content > div {
   display: none;
 
   @include lg {
